# assessment-terra

./: .gitignore  DESIGN.md  README.md  pyproject.toml
app/: main.py
app/api/: dependencies.py  schemas.py
app/api/routes/: generate.py  users.py
app/core/: exceptions.py  settings.py
app/db/: models.py  repository.py  schema_sync.py  session.py
app/services/: ai_factory.py  ai_provider.py  generation.py  local_llm.py  metering.py  quota.py
tests/: conftest.py  test_ai_factory.py  test_ai_provider.py  test_concurrency.py  test_config_api.py  test_db_schema.py  test_failures.py  test_generate_api.py  test_generation.py  test_metering.py  test_quota.py  test_users_api.py
